<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutComp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descrição"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageGas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image_gasolina"
            app:srcCompat="@drawable/gasolina" />

        <EditText
            android:id="@+id/editTextGas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_gasolina"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/imageEtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image_etanol"
            app:srcCompat="@drawable/etanol" />

        <EditText
            android:id="@+id/editTextEtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_etanol"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnComparar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/comparar_combustivel" />

        <TextView
            android:id="@+id/textResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>